scrollbar fixes

--- a/DaBubble/src/app/dashboard/content/chat-window/chat-window.component.scss
+++ b/DaBubble/src/app/dashboard/content/chat-window/chat-window.component.scss
@@ -15,28 +15,27 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
   
-    // WebKit Scrollbar
     &::-webkit-scrollbar {
-      width: 10px;
+      width: 7px;
     }
   
     &::-webkit-scrollbar-track {
-      background: blue;
+      background-color: transparent;
     }
   
     &::-webkit-scrollbar-thumb {
-      background-color: #888;
-      border-radius: 10px;
-      border: 3px solid #f1f1f1;
+      background-color: #EDEEFE; 
+      border-radius: 10px; 
+      border: 2px solid transparent;
+      background-clip: padding-box;
     }
-  
+    
     &::-webkit-scrollbar-thumb:hover {
-      background-color: #555;
+      background-color: #EDEEFE; 
     }
-  
-    // Firefox Scrollbar
+    
     scrollbar-width: thin;
-    scrollbar-color: #EDEEFE #f1f1f1;
+    scrollbar-color: #EDEEFE transparent;
 }
   
 
