--- a/DaBubble/src/app/dashboard/content/dm-window/dm-window.component.scss
+++ b/DaBubble/src/app/dashboard/content/dm-window/dm-window.component.scss
@@ -14,28 +14,27 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
   
-    // WebKit Scrollbar
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #EDEEFE; 
+    border-radius: 10px; 
+    border: 2px solid transparent;
+    background-clip: padding-box;
+  }
   
-    &::-webkit-scrollbar-track {
-      background: blue;
-    }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #EDEEFE; 
+  }
   
-    &::-webkit-scrollbar-thumb {
-      background-color: #888;
-      border-radius: 10px;
-      border: 3px solid #f1f1f1;
-    }
-  
-    &::-webkit-scrollbar-thumb:hover {
-      background-color: #555;
-    }
-  
-    // Firefox Scrollbar
-    scrollbar-width: thin;
-    scrollbar-color: #EDEEFE #f1f1f1;
+  scrollbar-width: thin;
+  scrollbar-color: #EDEEFE transparent;
 }
 
 
