--- a/DaBubble/src/app/dashboard/content/sidebar/sidebar.component.scss
+++ b/DaBubble/src/app/dashboard/content/sidebar/sidebar.component.scss
@@ -247,8 +247,30 @@
   flex-direction: column;
   gap: 13px;
   // max-height: 400px;
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #EDEEFE; 
+    border-radius: 10px; 
+    border: 2px solid transparent;
+    background-clip: padding-box;
+  }
+  
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #EDEEFE; 
+  }
+  
+  scrollbar-width: thin;
+  scrollbar-color: #EDEEFE transparent;
 }
 
 .rotated {
